<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GLCamera</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="formal_filter">formal</string>
    <string name="gamma_filter">gamma</string>
    <string name="gray_filter">gray</string>
    <string name="specia_filter">specia</string>
    <string name="hue_filter">hue</string>
    <string name="invert_filter">invert</string>
    <string name="nothing"></string>
    <string name="main_pager_title">拍照比例</string>
    <string name="exitApp">再按一次退出程序</string>
    <string name="cameras_success">拍照成功</string>
    <string name="main_camera">采照区域</string>
    <string name="camera_imgFilePath">/data/data/camera/pictures/</string>
    <string name="album_preview">图片预览</string>
    <string name="album_preview_img_null">暂无图片数据，请拍照后重试</string>
    <string name="loading_Img_datas">正在加载图像数据信息，请稍等&#8230;</string>
    <string name="album_delete_img">确定删除该图片?</string>
    <string name="album_delete_recommd">要删除这张图片?</string>
    <string name="album_delete_okBtn">果断删</string>
    <string name="img_detailInfo">图片的信息</string>
    <string name="album_delete_cancelBtn">不删了</string>
    <string name="change_mode">换个镜头</string>
    <string name="start_take">开始拍</string>
    <string name="takepic_camera_has_open">已经被打开</string>
    <string name="album_null">相册已无照片，拍一张，再来删哦&#8230;</string>
    <string name="album_img_null">请选择一张合适的照片，再来查看信息&#8230;</string>
    <string name="take_picture_exit">再按一次返回键退出相机</string>
    <string name="filter_s">Solaris</string>

</resources>